;; dune file
(library
   (name SUT)
   ; the linkall flag ensures that all of our tests are compiled and the
   ; -g flag emits debugging information
   (ocamlopt_flags -linkall -g)
   ; you will want to depend on the library you are testing as well, however for
   ; the purposes of this example we are only depending on the test runner itself
   (libraries lib rely.lib qcheck-rely qcheck-core)
   (modules (:standard \ Runner))
)
(executable
  ; the for the library is automatically detected because of the name, but we
  ; need to explicitly specify the package here
  (package troll-of-fame)
  (name Runner)
  (public_name Runner)
  (libraries SUT)
  (modules Runner)
)